add environmental variables and prep for deployment